--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "eslint": "eslint --fix *.js"
   },
   "author": "Steven",
   "license": "ISC",
@@ -15,6 +16,8 @@
   "devDependencies": {
     "@cypress/xpath": "^2.0.3",
     "cypress-localstorage-commands": "^2.2.3",
-    "cypress-xpath": "^2.0.1"
+    "cypress-xpath": "^2.0.1",
+    "eslint": "^8.43.0",
+    "eslint-plugin-react": "^7.32.2"
   }
 }
