fix eslint undef

--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "",
   "main": "main.js",
   "type": "module",
+  "cypress-cucumber-preprocessor": {
+    "nonGlobalStepDefinitions": true
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "eslint": "eslint --fix *.js"
+    "eslint": "eslint --fix *.js",
+    "test-cucumber": "cucumber-js"
   },
   "author": "Steven",
   "license": "ISC",
   "dependencies": {
-    "cypress": "^12.14.0"
+    "cypress": "^12.14.0",
+    "cypress-cucumber-preprocessor": "^4.3.1"
   },
   "devDependencies": {
     "@cypress/xpath": "^2.0.3",
@@ -19,5 +24,10 @@
     "cypress-xpath": "^2.0.1",
     "eslint": "^8.43.0",
     "eslint-plugin-react": "^7.32.2"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:cypress/recommended"
+    ]
   }
 }
