--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@cypress/xpath": "^2.0.3",
     "@testing-library/cypress": "^9.0.0",
     "cypress": "^12.16.0",
+    "cypress-file-upload": "^5.0.8",
     "cypress-localstorage-commands": "^2.2.3",
     "cypress-xpath": "^2.0.1",
     "eslint": "^8.43.0",
