--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cypressautomation",
   "version": "1.0.0",
-  "description": "",
+  "description": "Cypress with cucumber",
   "main": "main.js",
   "type": "module",
   "cypress-cucumber-preprocessor": {
@@ -15,7 +15,11 @@
   "author": "Steven",
   "license": "ISC",
   "dependencies": {
-    "cypress-cucumber-preprocessor": "^4.3.1"
+    "cypress-cucumber-preprocessor": "^4.3.1",
+    "prettier": "^3.0.0"
+  },
+  "cypress-cucumber-preprocessor": {
+    "nonGlobalStepDefinitions": true
   },
   "devDependencies": {
     "@cypress/xpath": "^2.0.3",
@@ -31,5 +35,14 @@
     "extends": [
       "plugin:cypress/recommended"
     ]
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "Cypress with cucumber"
+  },
+  "keywords": [
+    "Cypress",
+    "BDD",
+    "Cucumber"
+  ]
 }
