--- a/package.json
+++ b/package.json
@@ -18,17 +18,15 @@
     "cypress-cucumber-preprocessor": "^4.3.1",
     "prettier": "^3.0.0"
   },
-  "cypress-cucumber-preprocessor": {
-    "nonGlobalStepDefinitions": true
-  },
   "devDependencies": {
     "@cypress/xpath": "^2.0.3",
     "@testing-library/cypress": "^9.0.0",
-    "cypress": "^12.17.1",
+    "cypress": "^12.17.2",
     "cypress-file-upload": "^5.0.8",
     "cypress-localstorage-commands": "^2.2.3",
     "cypress-xpath": "^2.0.1",
     "eslint": "^8.43.0",
+    "eslint-plugin-cypress": "^2.13.3",
     "eslint-plugin-react": "^7.32.2"
   },
   "eslintConfig": {
