--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,5 @@
 	"[typescript]": {
 		"editor.defaultFormatter": "dbaeumer.vscode-eslint"
 	},
-	"eslint.format.enable": true,
-	"editor.formatOnSave": true
+	"eslint.format.enable": true
 }
