--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "cypress-localstorage-commands": "^2.2.3",
     "cypress-plugin-snapshots": "^1.4.4",
     "eslint-config-airbnb": "^19.0.4",
-    "prettier": "^3.0.0"
+    "prettier": "^3.0.0",
+    "cypress-file-upload": "^5.0.8",
+    "@testing-library/cypress": "^9.0.0",
+    "cypress": "^12.17.3"
   },
   "devDependencies": {
     "@cypress/xpath": "^2.0.3",
-    "@testing-library/cypress": "^9.0.0",
-    "cypress": "^12.17.3",
-    "cypress-file-upload": "^5.0.8",
     "cypress-xpath": "^2.0.1",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.9.0",
